--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="Description" content="Школы танцев, танцевальные события и вечеринки"/>
-	
+	<meta name="yandex-verification" content="e73d49b4298f11ea" />
 
 	<script src='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
 	<link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.1/css/all.min.css'/>
