--- a/static/add.html
+++ b/static/add.html
@@ -93,7 +93,7 @@
 	  <a  href="/">Dancemap.online</a>
     </div>
 	<div class="nav">
-        <a href="/add">Добавить школу</a>
+        <a href="/add.html">Добавить школу</a>
    </div>
   </header>
     <div class='content'>
