--- a/static/index.html
+++ b/static/index.html
@@ -137,7 +137,7 @@
 	  <a href="/">Dancemap.online</a>
     </div>
 	<div class="nav">
-        <a href="/add">Добавить школу</a>
+        <a href="/add.html">Добавить школу</a>
    </div>
   </header>
   <div id="mapid"></div>
