--- a/static/index.html
+++ b/static/index.html
@@ -23,9 +23,22 @@
   <script src="/socket.io/socket.io.js"></script>
   
 
-  <link href='/css/main.css' rel='stylesheet' />
-  <style>
+  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+<!-- Bootstrap JS
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+-->
+
+
+  <link href='/css/main.css' rel='stylesheet' />
+  
+
+
+
+  <style>
 
   </style>
   
@@ -51,13 +64,25 @@
   <body>
     
   <header style="">
-    <div id="logo" class="nav">
-	  <a href="/">Dancemap.online</a>
+
+    <div class="nav" id="logo">
+	    <a href="/">Dancemap</a>
     </div>
-	<div class="nav">
-        <a href="/add.html">Добавить школу</a>
+    
+    <div class="nav form-group">
+      <select class="form-control" id="classSelector">
+        <option value="all">Все студии</option>
+        <option value="hustle">Хастл</option>
+        <option value="zouk">Зук</option>
+      </select>
+    </div>
+
+    <div class="nav">
+        <a href="/add.html">Добавить</a>
    </div>
+
   </header>
+
   <div id="map-box"></div>
   
   <script  src="/js/dancemap.js"></script>
