try catch for cluster and testing for telegraf bot

--- a/routes/mongo.html
+++ b/routes/mongo.html
@@ -43,6 +43,9 @@
         <label for="bachata">bachata</label>
       </div>
       
+      <label for="speciality">Speciality</label>
+      <input type="text" name="speciality" id="speciality"  required>
+
       <input type="submit" name="Submit">
     </div>
   </form>
