--- a/routes/mongo.html
+++ b/routes/mongo.html
@@ -77,6 +77,7 @@
     }), {})
     
     if(!dancemap.util.isObjEmpty(data)) {
+       console.log(data);
        if(dancemap.util.isObjPropNotEmpty(data)) dancemap.socket.postStudio(data);
        return; 
     }
