css styling and  bachata cluster on server

--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,7 @@
     <meta name="Description" content="Школы танцев, танцевальные события и вечеринки"/>
   <meta name="yandex-verification" content="e73d49b4298f11ea" />
   
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <script src='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.js'></script>
   <!--<script src="https://kit.fontawesome.com/3d2fe1a67d.js" crossorigin="anonymous"></script>-->
   <link href='https://api.mapbox.com/mapbox-gl-js/v1.0.0/mapbox-gl.css' rel='stylesheet' />
@@ -74,12 +75,13 @@
         <option value="all">Все студии</option>
         <option value="hustle">Хастл</option>
         <option value="zouk">Зук</option>
+        <option value="bachata">Бачата</option>
       </select>
     </div>
 
     <div class="nav">
         <a href="/add.html">Добавить</a>
-   </div>
+    </div>
 
   </header>
 
