--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,8 @@
 
   <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  
+  <script  src="/js/dancemap.js"></script>
+  <script  src="/js/nav.js"></script>
 
   
   <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
@@ -63,31 +64,34 @@
   </head>
   
   <body>
-    
-  <header style="">
 
-    <div class="nav" id="logo">
-	    <a href="/">Dancemap</a>
-    </div>
-    
-    <div class="nav form-group">
-      <select class="form-control" id="classSelector">
-        <option value="all">Все студии</option>
-        <option value="hustle">Хастл</option>
-        <option value="zouk">Зук</option>
-        <option value="bachata">Бачата</option>
-      </select>
-    </div>
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="dancemap.nav.closeNav()">&times;</a>
+    <a href="/add.html">Добавить студию</a>
+  </div>
+  <div class="container-header__nav"> 
+    <header class="">
+      <div class="nav">   
+        <span class="burger-menu" onclick="dancemap.nav.openNav()">&#9776;</span>
+      </div>
+      <div class="nav">
+        <select class="form-control" id="class-selector">
+          <option value="all">Все студии</option>
+          <option value="hustle">Хастл</option>
+          <option value="zouk">Зук</option>
+          <option value="bachata">Бачата</option>
+        </select>
+      </div>
+      <div class="nav container-pseudo">
+        <input type="search" placeholder="Искать студию">
+      </div>
+    </header>
+  </div>
 
-    <div class="nav">
-        <a href="/add.html">Добавить</a>
-    </div>
-
-  </header>
 
   <div id="map-box"></div>
   
-  <script  src="/js/dancemap.js"></script>
+
   <script  src="/js/socket.js"></script>
   <script  src="/js/main.js"></script>
   <script>
