select dance class - moblie icon

--- a/static/index.html
+++ b/static/index.html
@@ -74,7 +74,7 @@
       <div class="nav">   
         <span class="burger-menu" onclick="dancemap.nav.openNav()">&#9776;</span>
       </div>
-      <div class="nav">
+      <div class="nav container-select__pseudo">
         <select class="form-control" id="class-selector">
           <option value="all">Все студии</option>
           <option value="hustle">Хастл</option>
@@ -82,7 +82,7 @@
           <option value="bachata">Бачата</option>
         </select>
       </div>
-      <div class="nav container-pseudo">
+      <div class="nav container-input__pseudo">
         <input type="search" placeholder="Искать студию">
       </div>
     </header>
