--- a/static/add.html
+++ b/static/add.html
@@ -30,6 +30,16 @@
   </script>
   <noscript><div><img src="https://mc.yandex.ru/watch/55886317" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   <!-- /Yandex.Metrika counter -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114689083-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114689083-3');
+  </script>
+
   <script  src="/js/dancemap.js"></script>
   <script  src="/js/nav.js"></script>
   </head>
@@ -50,7 +60,7 @@
       </header>
     </div>    
     <div class='content'>
-      <p>Для добавления школы на карту пишите в личку https://vk.com/id475340870 </p>
+      <h1>Для добавления школы танцев на карту пишите в <a href="https://vk.com/id475340870">личку</a> </h1>
     </div>
     <script>
     </script>  
