--- a/static/index.html
+++ b/static/index.html
@@ -70,10 +70,12 @@
         </select>
       </div>
       <div class="nav container-input__pseudo">
-        <input type="search" placeholder="Искать студию">
-        <input type="button" value="" class="btn-close" id="btn-close"/>
+        <input type="search" placeholder="Название студии">
+        <input type="button" value="" class="btn-clear" id="btn-clear"/>
       </div>
+
     </header>
+    <div class="search-prompt" id="search-prompt"><button>В этой части карты ничего не нашел</button></div>
   </div>
 
 
