--- a/static/index.html
+++ b/static/index.html
@@ -66,7 +66,9 @@
           <option value="all">Все студии</option>
           <option value="hustle">Хастл</option>
           <option value="zouk">Зук</option>
+          <option value="wcs">WCS</option>
           <option value="bachata">Бачата</option>
+          <!--<option value="salsa">Сальса</option>-->
         </select>
       </div>
       <div class="nav container-input__pseudo">
