--- a/static/index.html
+++ b/static/index.html
@@ -54,7 +54,7 @@
 
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="dancemap.nav.closeNav()">&times;</a>
-    <a href="/add.html">Добавить школу танцев на карту</a>
+    <a class="side-nav__link" href="/add.html">Добавить школу танцев на карту</a>
   </div>
   <div class="container-header__nav"> 
     <header class="">
