altername for search

--- a/routes/mongo.html
+++ b/routes/mongo.html
@@ -19,6 +19,8 @@
     <div style="display:flex;flex-direction: column;">
       <label for="name">Name:</label>
       <input type="text" name="name" id="name" minlength="1" maxlength="30" required>
+      <label for="altername">Altername:</label>
+      <input type="text" name="altername" id="altername" minlength="1" maxlength="30" required>
       <label for="address">Address:</label>
       <input type="text" name="address" id="address" minlength="1" maxlength="50" required>
       <label for="city">City:</label>
