--- a/static/notUsedIndex.html
+++ b/static/notUsedIndex.html
@@ -75,7 +75,9 @@
         <input type="search" placeholder="Название студии">
         <input type="button" value="" class="btn-clear" id="btn-clear"/>
       </div>
-
+      <a class="nav" id="container-logo" href="/" title="Танцевальная карта dancemap">
+        <span>dance</span><span>map</span>
+      </a>
     </header>
     <div class="search-prompt" id="search-prompt"><button>В этой части карты ничего не нашел</button></div>
   </div>
