--- a/static/add.html
+++ b/static/add.html
@@ -45,22 +45,18 @@
   </head>
   
   <body>
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="dancemap.nav.closeNav()">&times;</a>
-      <a href="/add.html">Добавить студию</a>
-    </div>
     <div class="container-header__nav"> 
       <header class="">
-        <div class="nav">   
-          <span class="burger-menu" onclick="dancemap.nav.openNav()">&#9776;</span>
-        </div>
-        <div class="nav">   
-          <a href="/" style="color:rgb(242, 80, 80)"> Dancemap.online</a>
-        </div>
+          
+         <a class="nav btn-back" href="/">Назад на главную</a>
+        
+        <a class="nav" id="container-logo" href="/" title="Танцевальная карта dancemap">
+          <span>dance</span><span>map</span>
+        </a>
       </header>
     </div>    
     <div class='content'>
-      <h1>Для добавления школы танцев на карту пишите в <a href="https://vk.com/id475340870">личку</a> </h1>
+      <h1 style="margin-left:17px">Для добавления школы танцев на карту пишите в <a href="https://vk.com/id475340870">личку</a> </h1>
     </div>
     <script>
     </script>  
