ld json fix for events

--- a/routes/mongo.html
+++ b/routes/mongo.html
@@ -44,6 +44,8 @@
       <input type="text" name="address" id="address" minlength="1" maxlength="50" required>
       <label for="city">City:</label>
       <input type="text" name="city" id="city" minlength="1" maxlength="50" required>
+      <label for="country">Country:</label>
+      <input type="text" name="country" id="country" minlength="1" maxlength="50" required>
       <label for="vk">vk:</label>
       <input type="text" name="vk" id="vk" minlength="1" maxlength="50" >
       <label for="lat">Latitude:</label>
