--- a/routes/mongo.html
+++ b/routes/mongo.html
@@ -204,6 +204,10 @@
           <label for="offer">offer2:</label>
           <input type="text" name="offer" id="" value='{"name":"name","price":"200","currency":"RUB"}' >
           <label for="offer">offer3</label>
+          <input type="text" name="offer" value='{"name":"name","price":"200","currency":"RUB"}'> 
+          <label for="offer">offer4</label>
+          <input type="text" name="offer" value='{"name":"name","price":"200","currency":"RUB"}'> 
+          <label for="offer">offer5</label>
           <input type="text" name="offer" value='{"name":"name","price":"200","currency":"RUB"}'>        
         </fieldset>
       </div>
